# curriculo-facil

./: .gitignore  README.md  app_web.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: app.py  curriculo.py  gerador_pdf.py  viacep.py
tests/: test_curriculo.py
